# Particle-of-Life

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  imgui.ini  run.bat  run.sh
src/: CMakeLists.txt  __main.cpp  main.cpp
src/app/: CMakeLists.txt  app.cpp  app.h  gui.cpp  gui.h
src/app/gui/: CMakeLists.txt  gui.cpp  gui.h
src/app/imgui/: CMakeLists.txt
src/app/imgui/backends/: CMakeLists.txt
src/app/particle/: interaction_matrix.cpp  interaction_matrix.h  physics.cpp  physics.h  range.cpp  range.h
src/app/physics/: CMakeLists.txt  accelerator.cpp  accelerator.h  interaction_matrix.cpp  interaction_matrix.h  particle.cpp  particle.h  physics.cpp  physics.h  range.cpp  range.h
